# tcp-gateway-rust

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
docker/: Dockerfile  docker-compose.yml
docker/init/: init-redis.sh
example_app/: Cargo.toml  dockerfile
example_app/src/: main.rs
src/: balancer.rs  config.rs  main.rs
src/config/: redis.rs
src/handlers/: connection.rs  metrics.rs  mod.rs
src/utils/: availability.rs  env.rs  initialization.rs  mod.rs  shutdown.rs
