[package]
name = "tcp-gateway-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
prometheus = "0.13"
axum = "0.7.5"
dotenv = "0.15"
envconfig = "0.10"
tracing = "0.1"
tracing-subscriber = "0.3"
redis = { version = "0.23", features = ["tokio-comp"] }
rand_chacha = "0.3"
