[package]
name = "tcp-gateway-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
redis = { version = "0.25", features = ["tokio-comp"] }
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio-util = "0.7"
prometheus = "0.13"